[package]
name = "feed-luv"
version = "0.1.0"
description = "A postive vibes only Twitter-like Solana Dapp"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "feed_luv"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
